# bt

./: .gitignore  Makefile  bluetooth.h  ffi.go  ffi_test.go  go.mod  main.go  rustffi.go  rustffi_test.go  rustffi_test_helper.go
include/simplersble/simplersble/src/: lib.rs
rust/: Cargo.toml
rust/src/: lib.rs
src/: CMakeLists.txt  bluetooth.c  bluetooth.h  bluetooth_example.c  notify.c
